Verif/Test/Invalide/test_erreur_3.44-9.deca
// Description:
//    Programme soulevant l'erreur (3.44)
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : Les types 'boolean' et 'int' sont incompatibles pour l'affectation (règle 3.44)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 13/01/2012

boolean b = 1 ;
{
}